# ai-intelligent-assistant

./: .gitignore  CHANGELOG.md  Claude.md  README.md  app.py  create_shortcut.ps1  launch_chat.py  launch_desk_pet.py  main.py  mcp_config.json  progress.md  pyproject.toml  rag_module.py  requirements.txt  requirements_temp.txt  update_shortcut.ps1  使用指南.md  启动桌宠.bat  启动桌宠.vbs  项目经历.md
.github/workflows/: test.yml
agents/: __init__.py  crew_manager.py  roles.py
assets/: NOTICE_aemeath.md  __init__.py  validation.json
chroma_data/: chroma.sqlite3
engine/: __init__.py  autonomous.py  client.py  config.py  conversation.py  logging_setup.py  mcp_server.py  memory.py  models.py  storage.py  vision.py
panels/: __init__.py  chat_panel.py
rag/: __init__.py  chunker.py  loader.py  vector_store.py
temp_uploads/: test_doc.docx
tests/: test_config.py  test_memory.py  test_rag.py  test_storage.py  test_tools.py
tools/: __init__.py  auto_tool.py  crew_tool.py  doc_tool.py  search_tool.py  time_tool.py  vision_tool.py
ui/: __init__.py  animator.py  bubble.py  desk_pet.py  input_popup.py  pet_widget.py  settings_dialog.py
