[project]
name = "luodi-able"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "openai>=2.44.0",
    "pypdf2>=3.0.1",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
