[project]
name = "luodi-able"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "crewai>=0.118.0",
    "ddgs>=9.14.4",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pypdf2>=3.0.1",
    "pyside6>=6.11.1",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
]
