[project]
name = "ai-intelligent-assistant"
version = "0.2.0"
description = "AI 智能助手 —— 桌宠 × Agent × RAG 全栈项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "crewai>=0.118.0",
    "ddgs>=9.14.4",
    "mcp>=1.28.1",
    "mypy>=2.1.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pypdf2>=3.0.1",
    "pyside6>=6.11.1",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "ruff>=0.15.20",
    "streamlit>=1.58.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["\\.venv/"]
